// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Autocomplete renders as disabled 1`] = `
<div
  className="css-1pcexqc-container cr-autocomplete"
  onKeyDown={[Function]}
>
  <div
    className="css-1t477io-control cr-autocomplete__control"
    onMouseDown={[Function]}
    onTouchEnd={[Function]}
  >
    <div
      className="css-1hwfws3 cr-autocomplete__value-container"
    >
      <div
        className="css-1f1n7m1-placeholder cr-autocomplete__placeholder"
      >
        Choose a color
      </div>
      <div
        className="css-1g6gooi"
      >
        <div
          className="cr-autocomplete__input"
          style={
            Object {
              "display": "inline-block",
            }
          }
        >
          <input
            aria-autocomplete="list"
            autoCapitalize="none"
            autoComplete="off"
            autoCorrect="off"
            disabled={false}
            id="color-input"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            spellCheck="false"
            style={
              Object {
                "background": 0,
                "border": 0,
                "boxSizing": "content-box",
                "color": "inherit",
                "fontSize": "inherit",
                "label": "input",
                "opacity": 1,
                "outline": 0,
                "padding": 0,
                "width": "1px",
              }
            }
            tabIndex="0"
            type="text"
            value=""
          />
          <div
            style={
              Object {
                "height": 0,
                "left": 0,
                "overflow": "scroll",
                "position": "absolute",
                "top": 0,
                "visibility": "hidden",
                "whiteSpace": "pre",
              }
            }
          />
        </div>
      </div>
    </div>
    <div
      className="css-emavf5 cr-autocomplete__indicators"
    >
      <div
        aria-hidden="true"
        onMouseDown={[Function]}
        onTouchEnd={[Function]}
        style={
          Object {
            ":hover": Object {
              "color": "hsl(0, 0%, 60%)",
            },
            "boxSizing": "border-box",
            "color": "hsl(0, 0%, 80%)",
            "display": "flex",
            "label": "indicatorContainer",
            "padding": 8,
            "transition": "color 150ms",
          }
        }
      >
        <svg
          className="cr-autocomplete__dropdownIndicator cr-icon css-ur13wh-StyledIcon er8b7wo0"
          fill="#848a8a"
          style={
            Object {
              "height": "1rem",
              "width": "1rem",
            }
          }
          viewBox="0 0 16 16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            className="cr-icon__base cr-icon__base-1"
            d="M7.299 10.641c.388.475 1.012.482 1.406 0L11.8 6.86c.389-.475.194-.86-.418-.86H4.623c-.62 0-.812.378-.418.86l3.094 3.781z"
          />
        </svg>
      </div>
    </div>
  </div>
  <input
    name="color-input"
    type="hidden"
    value=""
  />
</div>
`;

exports[`Autocomplete renders correctly 1`] = `
<div
  className="css-1pcexqc-container cr-autocomplete"
  onKeyDown={[Function]}
>
  <div
    className="css-1t477io-control cr-autocomplete__control"
    onMouseDown={[Function]}
    onTouchEnd={[Function]}
  >
    <div
      className="css-1hwfws3 cr-autocomplete__value-container"
    >
      <div
        className="css-1f1n7m1-placeholder cr-autocomplete__placeholder"
      >
        Choose a color
      </div>
      <div
        className="css-1g6gooi"
      >
        <div
          className="cr-autocomplete__input"
          style={
            Object {
              "display": "inline-block",
            }
          }
        >
          <input
            aria-autocomplete="list"
            autoCapitalize="none"
            autoComplete="off"
            autoCorrect="off"
            disabled={false}
            id="color-input"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            spellCheck="false"
            style={
              Object {
                "background": 0,
                "border": 0,
                "boxSizing": "content-box",
                "color": "inherit",
                "fontSize": "inherit",
                "label": "input",
                "opacity": 1,
                "outline": 0,
                "padding": 0,
                "width": "1px",
              }
            }
            tabIndex="0"
            type="text"
            value=""
          />
          <div
            style={
              Object {
                "height": 0,
                "left": 0,
                "overflow": "scroll",
                "position": "absolute",
                "top": 0,
                "visibility": "hidden",
                "whiteSpace": "pre",
              }
            }
          />
        </div>
      </div>
    </div>
    <div
      className="css-emavf5 cr-autocomplete__indicators"
    >
      <div
        aria-hidden="true"
        onMouseDown={[Function]}
        onTouchEnd={[Function]}
        style={
          Object {
            ":hover": Object {
              "color": "hsl(0, 0%, 60%)",
            },
            "boxSizing": "border-box",
            "color": "hsl(0, 0%, 80%)",
            "display": "flex",
            "label": "indicatorContainer",
            "padding": 8,
            "transition": "color 150ms",
          }
        }
      >
        <svg
          className="cr-autocomplete__dropdownIndicator cr-icon css-ur13wh-StyledIcon er8b7wo0"
          fill="#848a8a"
          style={
            Object {
              "height": "1rem",
              "width": "1rem",
            }
          }
          viewBox="0 0 16 16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            className="cr-icon__base cr-icon__base-1"
            d="M7.299 10.641c.388.475 1.012.482 1.406 0L11.8 6.86c.389-.475.194-.86-.418-.86H4.623c-.62 0-.812.378-.418.86l3.094 3.781z"
          />
        </svg>
      </div>
    </div>
  </div>
  <input
    name="color-input"
    type="hidden"
    value=""
  />
</div>
`;

exports[`Autocomplete renders in loading mode 1`] = `
<div
  className="css-1pcexqc-container cr-autocomplete"
  onKeyDown={[Function]}
>
  <div
    className="css-1t477io-control cr-autocomplete__control"
    onMouseDown={[Function]}
    onTouchEnd={[Function]}
  >
    <div
      className="css-1hwfws3 cr-autocomplete__value-container"
    >
      <div
        className="css-1f1n7m1-placeholder cr-autocomplete__placeholder"
      >
        Choose a color
      </div>
      <div
        className="css-1g6gooi"
      >
        <div
          className="cr-autocomplete__input"
          style={
            Object {
              "display": "inline-block",
            }
          }
        >
          <input
            aria-autocomplete="list"
            autoCapitalize="none"
            autoComplete="off"
            autoCorrect="off"
            disabled={false}
            id="color-input"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            spellCheck="false"
            style={
              Object {
                "background": 0,
                "border": 0,
                "boxSizing": "content-box",
                "color": "inherit",
                "fontSize": "inherit",
                "label": "input",
                "opacity": 1,
                "outline": 0,
                "padding": 0,
                "width": "1px",
              }
            }
            tabIndex="0"
            type="text"
            value=""
          />
          <div
            style={
              Object {
                "height": 0,
                "left": 0,
                "overflow": "scroll",
                "position": "absolute",
                "top": 0,
                "visibility": "hidden",
                "whiteSpace": "pre",
              }
            }
          />
        </div>
      </div>
    </div>
    <div
      className="css-emavf5 cr-autocomplete__indicators"
    >
      <svg
        className="e1pla2t60 cr-icon css-1ktlw1z-StyledIcon-StyledIcon er8b7wo0"
        fill="#abb3b3"
        style={
          Object {
            "height": "1.125rem",
            "width": "1.125rem",
          }
        }
        viewBox="0 0 16 16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          className="cr-icon__base cr-icon__base-2"
          d="M8 16A8 8 0 1 1 8 0a8 8 0 0 1 0 16zm0-3A5 5 0 1 0 8 3a5 5 0 0 0 0 10z"
          fill="#848a8a"
          opacity=".3"
        />
        <path
          className="cr-icon__base cr-icon__base-1"
          d="M8 13a1.5 1.5 0 0 1 0 3A8 8 0 0 1 .323 5.742a1.5 1.5 0 1 1 2.879.846A5 5 0 0 0 8 13z"
        />
      </svg>
      <div
        aria-hidden="true"
        onMouseDown={[Function]}
        onTouchEnd={[Function]}
        style={
          Object {
            ":hover": Object {
              "color": "hsl(0, 0%, 60%)",
            },
            "boxSizing": "border-box",
            "color": "hsl(0, 0%, 80%)",
            "display": "flex",
            "label": "indicatorContainer",
            "padding": 8,
            "transition": "color 150ms",
          }
        }
      >
        <svg
          className="cr-autocomplete__dropdownIndicator cr-icon css-ur13wh-StyledIcon er8b7wo0"
          fill="#848a8a"
          style={
            Object {
              "height": "1rem",
              "width": "1rem",
            }
          }
          viewBox="0 0 16 16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            className="cr-icon__base cr-icon__base-1"
            d="M7.299 10.641c.388.475 1.012.482 1.406 0L11.8 6.86c.389-.475.194-.86-.418-.86H4.623c-.62 0-.812.378-.418.86l3.094 3.781z"
          />
        </svg>
      </div>
    </div>
  </div>
  <input
    name="color-input"
    type="hidden"
    value=""
  />
</div>
`;

exports[`Autocomplete renders with an initial value 1`] = `
<div
  className="css-1pcexqc-container cr-autocomplete"
  onKeyDown={[Function]}
>
  <div
    className="css-1t477io-control cr-autocomplete__control"
    onMouseDown={[Function]}
    onTouchEnd={[Function]}
  >
    <div
      className="css-1hwfws3 cr-autocomplete__value-container cr-autocomplete__value-container--has-value"
    >
      <div
        className="css-dvua67-singleValue cr-autocomplete__single-value"
      >
        Red
      </div>
      <div
        className="css-1g6gooi"
      >
        <div
          className="cr-autocomplete__input"
          style={
            Object {
              "display": "inline-block",
            }
          }
        >
          <input
            aria-autocomplete="list"
            autoCapitalize="none"
            autoComplete="off"
            autoCorrect="off"
            disabled={false}
            id="color-input"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            spellCheck="false"
            style={
              Object {
                "background": 0,
                "border": 0,
                "boxSizing": "content-box",
                "color": "inherit",
                "fontSize": "inherit",
                "label": "input",
                "opacity": 1,
                "outline": 0,
                "padding": 0,
                "width": "1px",
              }
            }
            tabIndex="0"
            type="text"
            value=""
          />
          <div
            style={
              Object {
                "height": 0,
                "left": 0,
                "overflow": "scroll",
                "position": "absolute",
                "top": 0,
                "visibility": "hidden",
                "whiteSpace": "pre",
              }
            }
          />
        </div>
      </div>
    </div>
    <div
      className="css-emavf5 cr-autocomplete__indicators"
    >
      <div
        aria-hidden="true"
        onMouseDown={[Function]}
        onTouchEnd={[Function]}
        style={
          Object {
            ":hover": Object {
              "color": "hsl(0, 0%, 60%)",
            },
            "boxSizing": "border-box",
            "color": "hsl(0, 0%, 80%)",
            "display": "flex",
            "label": "indicatorContainer",
            "padding": 8,
            "transition": "color 150ms",
          }
        }
      >
        <svg
          className="cr-autocomplete__clearIndicator cr-icon css-ur13wh-StyledIcon er8b7wo0"
          fill="hsl(0, 0%, 80%)"
          style={
            Object {
              "height": "0.625rem",
              "width": "0.625rem",
            }
          }
          viewBox="0 0 16 16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            className="cr-icon__base cr-icon__base-1"
            d="M10.216 8l3.325-3.325a1.567 1.567 0 1 0-2.216-2.216L8 5.784 4.675 2.459A1.567 1.567 0 0 0 2.46 4.675L5.784 8l-3.325 3.325a1.567 1.567 0 1 0 2.216 2.216L8 10.216l3.325 3.325a1.567 1.567 0 1 0 2.216-2.216L10.216 8z"
          />
        </svg>
      </div>
      <div
        aria-hidden="true"
        onMouseDown={[Function]}
        onTouchEnd={[Function]}
        style={
          Object {
            ":hover": Object {
              "color": "hsl(0, 0%, 60%)",
            },
            "boxSizing": "border-box",
            "color": "hsl(0, 0%, 80%)",
            "display": "flex",
            "label": "indicatorContainer",
            "padding": 8,
            "transition": "color 150ms",
          }
        }
      >
        <svg
          className="cr-autocomplete__dropdownIndicator cr-icon css-ur13wh-StyledIcon er8b7wo0"
          fill="#848a8a"
          style={
            Object {
              "height": "1rem",
              "width": "1rem",
            }
          }
          viewBox="0 0 16 16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            className="cr-icon__base cr-icon__base-1"
            d="M7.299 10.641c.388.475 1.012.482 1.406 0L11.8 6.86c.389-.475.194-.86-.418-.86H4.623c-.62 0-.812.378-.418.86l3.094 3.781z"
          />
        </svg>
      </div>
    </div>
  </div>
  <input
    name="color-input"
    type="hidden"
    value="1"
  />
</div>
`;
